<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mycoutryabout">专注打造农村移动电子商务平台\n作者：刘冬冬    宁强    潘若薇    刘熔\n版本信息：V1.0</string>
    <string name="toast_title">功能有待完善！\n\n请选择其他功能！</string>
    <string name="toast_isfile">头像文件目录不存在！</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
	<string name="release_to_refresh">释放立即刷新</string>
	<string name="refreshing">正在刷新…</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
    
    <string name="goods">商品特卖</string>
    <string name="cultivation">承包养殖</string>
    <string name="join">招商加盟</string>
    <string name="group_buying">大单团购</string>
   <string name="mycountry">我的村</string>
    <string name="action_settings">Settings</string>
    <string name="choose">选择村庄</string>
    <string name="business">村庄市场</string>
    <string name="onsale">商品特卖</string>
    <string name="groupon">大单团购</string>
    <string name="contract">承包养殖</string>
    <string name="joinin">招商加盟</string>
    <string name="set">设置</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="User_Name">用户名：</string>
    <string name="Password">密码：</string>
    <string name="confirmpwd">确认密码：</string>    
    <string name="out">退出</string>
    <string name="enterpwd">输入密码：</string> 
    <string name="Repwd">确认密码：</string>  
    <string name="changepwd">更改密码：</string> 
    <string name="back">返回上一页</string> 
    <string name="edit">编辑</string>
    <string name="remotecontrol">远程控制</string>
    <string name="video">视频</string>
    <string name="family">村庄家人</string>
    <string name="Email">邮箱:</string>
    <string name="success">注册成功！欢迎加入“我的村”！</string>
    <string name="welcome">欢迎进入“我的村”！</string>
    <string name="calendar">村庄日历</string>
    <string name="image">村庄美图</string>
    <string name="develop">发展变迁</string>
    <string name="remark">今日备注：</string>
    <string name="save">保存</string>
    <string name="note">民情日记</string>
    <string name="culture">村庄文化</string>
    <string name="specialty">村庄特产</string>
    <string name="charity">爱心集结</string>
    <string name="tour">村庄旅游</string>
    <string name="massage">消息通知</string> 
    <string name="enter">进入村庄</string>
    <string name="cancel">取消</string>
    <string name="app_name">我的村</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="me">关于我</string>
    <string name="search">发现</string>
    <string name="more">更多</string>
    <string name="_">菜单</string>
    <!-- 产品信息输入 -->
    <string name="gsale_id">编号</string>
    <string name="gsale_ids">请输入产品编号</string>
    <string name="contact_id">介绍</string>
    <string name="contact_ids">请输入产品介绍</string>
    <string name="uno">单价</string>
    <string name="unos">请输入产品单价</string>
    <string name="goods_price">库存</string>
    <string name="goods_prices">请输入产品库存</string>
    <string name="gsale_info">介绍</string>
    <string name="gsale_infos">请输入产品介绍</string>
    <string name="mtype_id">标题</string>
    <string name="mtype_ids">请输入标题</string>
    <string name="reset_goodspro">重写</string>
    <string name="goods_produce">提交</string>
    
    
    <string name="town_tour">农家乐</string>
    
    <string name="greenfood">绿色食品</string>
    
    <string name="tv_fruit">添加水果</string>
    <string name="tv_干货">添加干货</string>
    <string name="tv_liangyou">发布粮油</string>
    <string name="tv_jiu">添加农家酒</string>
    <string name="tv_meat">添加肉类</string>
    <string name="tv_vegetable">添加蔬菜</string>
    <string name="tv_tour">添加旅游</string>
    <string name="tv_techan">添加特产</string>
    
    
    <string name="smssdk_country_num">+86</string>
    <string name="smssdk_write_mobile_phone">请填写手机号码</string>
    <string name="smssdk_next">下一步</string>
    <string name="smssdk_regist">使用手机号码注册</string>
    <string name="smssdk_make_sure_mobile_detail">我们将发送验证码短信到这个号码：</string>
    <string name="smssdk_ok">好</string>
    <string name="smssdk_cancel">取消</string>
    <string name="smssdk_get_verification_code_content">获取验证码中</string>
    <string name="smssdk_write_identify_code">填写验证码</string>
    <string name="smssdk_receive_msg"><Data>接收短信大约需要&lt;font color=#209526>%s&lt;/font>秒</Data></string>
    <string name="smssdk_send_mobile_detail"><Data>我们已发送&lt;font color=#209526>验证码&lt;/font>短信到这个号码:</Data></string>
    <string name="smssdk_unreceive_identify_code"><Data>&lt;font color=#a8b8cb> 收不到验证码？&lt;/font></Data></string>
    <string name="smssdk_resend_identify_code">重新获取验证码</string>
    <string name="smssdk_back">返回 </string>
    <string name="smssdk_close_identify_page_dialog">验证码短信可能略有延迟，确定返回并重新开始？</string>
    <string name="smssdk_wait">等待 </string>

</resources>