<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/smssdk_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp" >

        <TextView
            android:id="@+id/tv_country_num"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/smssdk_input_bg_focus"
            android:gravity="center"
            android:text="@string/smssdk_country_num"
            android:textColor="#ff353535"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/smssdk_input_bg_focus" >

            <EditText
                android:id="@+id/et_write_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/smssdk_write_mobile_phone"
                android:inputType="phone"
                android:textColor="#ff353535"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:background="@drawable/smssdk_clear_search"
                android:scaleType="centerInside"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp" 
        android:text="@string/smssdk_next"
        android:textColor="#ffffff"
        android:background="@drawable/smssdk_btn_disenable"
        android:textSize="15sp"
        />

</LinearLayout>