<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/deep" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <ImageView
                android:id="@+id/back_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/top_action_btn"
                android:clickable="true"
                android:onClick="onBackBtnClick"
                android:padding="10dp"
                android:src="@drawable/navigation_back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/segmentation" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:onClick="onPageTitleClick"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/User_Name"
            android:textSize="15sp" 
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:hint="请输入您的用户名"
            android:minWidth="200px" />
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Password"
            android:textSize="15sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:hint="请输入您的密码"
            android:inputType="textPassword"
            android:minWidth="200px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/confirmpwd"
            android:textSize="15sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/register_repassword"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:hint="请确认您的密码"
            android:inputType="textPassword"
            android:minWidth="200px" />
    </LinearLayout>

  <LinearLayout
      android:id="@+id/registerLinearLayout06"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:gravity="center_vertical"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip" >

      <TextView
          android:id="@+id/registerTextView06"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="用户类别："
          android:layout_centerHorizontal="true"
          android:orientation="horizontal"
          android:textSize="15sp"
          android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/registerRadioGroup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/register_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginLeft="10dp"
                android:text="普通用户"
                android:textColor="#000000" >
            </RadioButton>

            <RadioButton
                android:id="@+id/register_guanliyuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="管理员"
                android:textColor="#000000" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="0.25" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@drawable/btn_login"
            android:text="@string/register"
            android:textSize="15sp" />

        <Button
            android:id="@+id/register_cancel"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@drawable/btn_login"
            android:text="@string/cancel"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>